# custom-unix-terminal

./: 404.html  CHANGELOG.md  CNAME  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  update-changelog.bash  update_repo.py  zensical.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: mkdocs-deploy.yml  pr-build.yml  update-from-submodule.yml  zensical-deploy.yml
changelog/: index.html
docs/: index.md
docs/terminal-profiles/: Basic (Modified).terminal
includes/: abbreviations.md
includes/csv/: useful-packages-npm.csv  useful-packages-tppm.csv
includes/neovim-init-files/: neovim-init-non-vim-plug.vim
includes/tables/: cli-colors-explained.md  oh-my-zsh-plugins.md  useful-packages-npm.md  useful-packages-tppm.md
includes/zshrc-files/: zshrc-linux-snippet.zsh  zshrc-linux.zsh  zshrc-macos-snippet.zsh  zshrc-macos.zsh
license/: index.html
overrides/partials/integrations/analytics/: matomo.html
search/: search_index.json
terminal-profiles/: Basic (Modified).terminal  gnome-terminal-profile.dconf
tests/: test_update_repo.py
utils/: __init__.py  chezmoi_utils.py  constants.py  file_utils.py  marker_config.py  section_utils.py
