[project]
name = "custom-unix-terminal"
version = "2"
description = "A project that uses mkdocs to host documentation for customizations of my Unix terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin==1.5.0",
    "mkdocs-material==9.7.1",
    "mkdocs-table-reader-plugin==3.1.0",
]
